// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppError overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Cecelia Langosh
  </div>
</DocumentFragment>
`;

exports[`AppError overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Cassidy Brekke
  </div>
</DocumentFragment>
`;

exports[`AppError overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Chance Kessler
  </div>
</DocumentFragment>
`;

exports[`AppError overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Cleo Lindgren
  </div>
</DocumentFragment>
`;

exports[`AppError overview 5 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Adeline Welch
  </div>
</DocumentFragment>
`;
